--- a/My Notes.xcodeproj/xcshareddata/xcschemes/My Notes.xcscheme
+++ b/My Notes.xcodeproj/xcshareddata/xcschemes/My Notes.xcscheme
@@ -82,6 +82,12 @@
             ReferencedContainer = "container:My Notes.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "com.apple.CoreData.ConcurrencyDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
